# Python_Study_Repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
Javascript Study/Day03/: readme.md
Project_AdminPage/Admin page/: index.html
Project_BookAPI/: api.py
Project_DummyDataTest/: pyproject.toml  readme.md
Project_DummyDataTest/MySQL/DDL/: airport-ddl.sql
Project_DummyDataTest/src/: create_all_dummy.py  main.py  table_modifier.py
Project_DummyDataTest/src/dummy_generator/: airline_generator.py  airplane_generator.py  airplane_type_generator.py  airport_generator.py  airport_geo_generator.py  flight_generator.py  flight_log_generator.py  flightschedule_generator.py  passengerdetails_generator.py  weatherdata_generator.py
Project_DummyDataTest/src/version2/: create_all_dummy.py
Project_MyBlog/: app.py  config.py  pyproject.toml  readme.md
Project_MyBlog/DDL/: generate_db_and_tables.sql
Project_MyBlog/migrations/versions/: 2e091161a9e1_.py
Project_MyBlog/models/: models.py
Project_MyBlog/statics/: main.js
Project_MyBlog/templates/: posts.html
Project_MyBlog/views/: posts.py
Project_OnepieceGame/: readme.md
Project_OnepieceGame/module/: calculate_distance.py
Project_PhoneBook/: phone_book.py
Project_SIMRITEST/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Project_SIMRITEST/.win_venv/: pyvenv.cfg
Project_SIMRITEST/.win_venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
Project_SIMRITEST/config/: app_config.py
Project_SIMRITEST/forms/: AdminForm.py  Answerform.py  QuestionForm.py  Userform.py
Project_SIMRITEST/migrations/versions/: 364d866d9abe_.py  51f5c927dbbc_.py  71bc84f0d581_.py  878bde435efd_.py  be5e349d24f1_.py  cabd2c25fca7_.py  f71bfd336e46_.py
Project_SIMRITEST/models/: model_definitions.py
Project_SIMRITEST/static/: flask_paginate.css
Project_SIMRITEST/templates/: base.html  home.html  index.html  login.html  my_master.html  sign_up.html
Project_SIMRITEST/templates/admin/: add_question.html  admin_home.html  admin_login.html  answer_list.html  base.html  login.html  question_list.html  register.html
Project_SIMRITEST/templates/admin/error/: 404.html  Integrity.html
Project_SIMRITEST/templates/home/: index.html  result.html  userinfo.html
Project_SIMRITEST/templates/question/: question_detail.html  question_list.html
Project_SIMRITEST/views/: admin_views.py  main_views.py  question_views.py
Project_SIMRITEST/views/admin_util/: admin_error_handler.py  utils.py
Project_SIMRITEST/views/question_util/: question_error_handler.py  utils.py
Project_Yes24Crawler/: python.py  readme.md  requirements.txt  yes24_crawler.py
Study_DataStructure/: 001.array_list.cpp  003.doubly_linked_list.py  008.binary_search_tree.py
Study_Database/Day 01/: chapter01_13.ipynb
Study_Database/Day 03/: chapter14_20.sql
Study_Database/Day 04/: chapter14_21_create.sql  chapter14_21_delete.sql  chapter14_21_read.sql  chapter14_21_update.sql
Study_Database/MongoDB Test/: testmongodb.py
Study_Django/boards/: admin.py  models.py
Study_Django/common/: models.py
Study_Django/config/: settings.py  urls.py  views.py
Study_Django/feeds/: urls.py  views.py
Study_Django/users/: admin.py  models.py
Study_Flask/Project_BookAPI/: api.py  app.py
Study_Flask/flask_admin_test/: app.py
Study_Flask/flask_study_01/pythonProject/: pyproject.toml
Study_Flask/flask_study_01/pythonProject/templates/: index.html
Study_Flask/flask_study_03/: app.py  pyproject.toml
Study_Flask/flask_study_03/resources/: Item.py
Study_Flask/flask_study_04/: abort.py  api.py  app.py  pyproject.toml  schemas.py
Study_Flask/flask_study_05/: app.py  pyproject.toml  user_routes.py
Study_Flask/flask_study_05/templates/: users.html
Study_Flask/flask_study_06/: app.py
Study_Flask/jump_to_flask/: pybo.db  pyproject.toml
Study_Flask/jump_to_flask/migrations/versions/: 65bc8c581ad4_.py
Study_Flask/jump_to_flask/pybo/: __init__.py  filter.py  forms.py  models.py
Study_Flask/jump_to_flask/pybo/templates/: base.html  navbar.html
Study_Flask/jump_to_flask/pybo/templates/question/: question_detail.html  question_form.html  question_list.html
Study_Flask/jump_to_flask/pybo/views/: answer_views.py  main_views.py  question_views.py
Study_Flask/nexon_api/: main.py
Study_Flask/standard_flask_survey/: README.md  db.sqlite  entrypoint.sh  nginx.conf  pyproject.toml  run.py
Study_Flask/standard_flask_survey/app/: __init__.py  models.py  routes.py
Study_Flask/standard_flask_survey/app/templates/: admin.html  dashboard.html  index.html  manage_questions.html  quiz.html  quiz_list.html  results.html
Study_Flask/standard_flask_survey/migrations/: env.py
Study_Flask/standard_flask_survey/migrations/versions/: 4323820566e2_.py  cf5540f43bf0_add_created_at.py  fd6b09e0e299_add_order_num_and_is_active_to_question.py
Study_Flask/views/: main_views.py
Study_Git/Challenge_01/: oz_back.yaml  oz_cs.yaml  oz_fullstack.yaml  oz_market.yaml  oz_service.yaml
Study_HTML&CSS/: readme.md
Study_Javascript/: readme.md
Study_Javascript/Day03/: readme.md
Study_Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
Study_Python/: scikit_jjikmuk.ipynb
Study_Python/Data_Analysis/: seaborn_practice.ipynb
Study_Python/Day06/: Ch01_task.ipynb  Ch03_task.ipynb  Ch04_task(code).ipynb  Ch04_task.ipynb
Study_Python/Day07/: Ch05_task.ipynb  Ch06_task.ipynb  Ch07_task.ipynb  Ch08_task.ipynb  Chapter0508_과제(CS).ipynb  Chapter0508_과제.ipynb  class_practice.py  exception_practice.py  input.txt  (+1 more)
[Project] Admin page/: readme.md
[Project] Dummy Data Test/: readme.md
[Project] Onepiece Game/: game.py  main.py  readme.md
[Project] Phone Book/: phone_book.py  readme.md
[Study] DB/: chapter01_13.ipynb  chapter07_13.ipynb
[Study] DataStructure/: 006.queue.py  007.deque.py  array_list.cpp  circular_linked_list.py  doubly_linked_list.py  heap.py  linkedlist.py
[Study] Git/: admin_info.yaml  oz_fullstack.yaml
[Study] HTML&CSS/: readme.md
[Study] Javascript/: readme.md
[Study] Python/: Ch04_task(code).ipynb  asdf.py
(+240 files in other folders)
