[tool.poetry]
name = "ozcoding-backend"
version = "0.1.0"
description = ""
authors = ["Sullung <sullung2yo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.6"
asgiref = "3.8.1"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
flask = "3.0.3"
flask-login = "0.6.3"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
outcome = "1.3.0.post0"
packaging = "24.0"
pymysql = "1.1.1"
pysocks = "1.7.1"
python-dotenv = "1.0.1"
requests = "2.32.2"
selenium = "4.21.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlalchemy = "2.0.30"
sqlparse = "0.5.0"
trio = "0.25.1"
trio-websocket = "0.11.1"
typing-extensions = "4.12.0"
urllib3 = "2.2.1"
webdriver-manager = "4.0.1"
werkzeug = "3.0.3"
wsproto = "1.2.0"
djangorestframework = "^3.15.1"
mypy = "^1.10.0"
black = "^24.4.2"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
google-api-python-client = "^2.132.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
