[tool.poetry]
name = "project-simritest"
version = "0.1.0"
description = ""
authors = ["Scanf-s <calzone0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-login = "^0.6.3"
flask-admin = "^1.6.1"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
mysqlclient = "^2.2.4"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
