[tool.poetry]
name = "project-simritest"
version = "0.1.0"
description = ""
authors = ["Scanf-s <calzone0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-login = "0.6.3"
flask-admin = "1.6.1"
flask = "3.0.3"
flask-sqlalchemy = "3.1.1"
flask-migrate = "4.0.7"
mysqlclient = "2.2.4"
pymysql = "1.1.0"
alembic = "1.13.1"
blinker = "1.8.1"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
greenlet = "3.0.3"
idna = "3.7"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.3"
keyring = "24.3.1"
mako = "1.3.3"
markupsafe = "2.1.5"
more-itertools = "10.2.0"
msgpack = "1.0.8"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.1"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pyproject-hooks = "1.1.0"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.9.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sqlalchemy = "2.0.29"
tomlkit = "0.12.4"
trove-classifiers = "2024.4.10"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
virtualenv = "20.26.1"
werkzeug = "3.0.2"
wtforms = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
