[tool.poetry]
name = "flask-study-2"
version = "0.1.0"
description = ""
authors = ["Scanf-s <calzone0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Migrate = "^4.0.7"
poetry = "^1.8.2"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
